--- a/lesson18/src/main/resources/templates/fragments.html
+++ b/lesson18/src/main/resources/templates/fragments.html
@@ -16,6 +16,7 @@
         Language
         <a href=".?lang=en">EN</a>
         <a href=".?lang=ru">RU</a>
+        <a href="/logout">Logout</a>
     </span>
 
 <div th:fragment="footer">
